# simplogger

./: CMakeLists.txt  README.md  main.cpp
Logger/: Logger.cpp  Logger.h
